--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
             text-shadow: 2px 2px 0px rgba(59, 130, 246, 0.3), -2px -2px 0px rgba(192, 38, 211, 0.3);
         }
     </style>
+    <link rel="manifest" href="/manifest.json">
 </head>
 <body class="bg-gray-900 h-screen flex flex-col font-sans text-gray-100 selection:bg-fuchsia-500 selection:text-white">
 
