--- a/public/index.html
+++ b/public/index.html
@@ -298,6 +298,19 @@
              const isWork = document.getElementById('cat-work').checked;
              updateTheme(isWork);
         });
+// --- SERVICE WORKER REGISTRATION ---
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(registration => {
+        console.log('ServiceWorker registration successful with scope: ', registration.scope);
+      })
+      .catch(error => {
+        console.log('ServiceWorker registration failed: ', error);
+      });
+  });
+}
+        
     </script>
 </body>
 </html>
