--- a/public/index.html
+++ b/public/index.html
@@ -298,7 +298,7 @@
              const isWork = document.getElementById('cat-work').checked;
              updateTheme(isWork);
         });
-// --- SERVICE WORKER REGISTRATION --
+// --- SERVICE WORKER REGISTRATION ---
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
     navigator.serviceWorker.register('/service-worker.js')
